--- a/plugin.yml
+++ b/plugin.yml
@@ -10,3 +10,7 @@ commands:
     description: Chicken Scratch
   fox:
     description: What does the fox say?
+  broken:
+    description: If something is broken, we blame Endain of course.
+  time:
+    description: Wibbly Wobbly
