Added a chicken spawn event to chicken cannon for the start of actually having the chicken cannon work

--- a/plugin.yml
+++ b/plugin.yml
@@ -15,4 +15,4 @@ commands:
   timey:
     description: Wibbly Wobbly Timey Wimey
   chickencannon:
-    description: cat boom
+    description: chicken goes boom
